Readme, license improvements

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -8,7 +8,7 @@ classes: wide
 
 No page could be found at this URL.
 
-If you believe this is a mistake, feel free to [contact us]({% link _pages/about.md %}#contact).
+If you believe this is a mistake, feel free to [contact us]({% link about.md %}#contact).
 
 <script>plausible("404",{ props: { path: document.location.pathname } });</script>
 
